Started work on information button for layers

--- a/info-mapper/src/app/map-components/map.component.css
+++ b/info-mapper/src/app/map-components/map.component.css
@@ -101,6 +101,12 @@ iframe {
 	font-size: 5px;
 }
 
+/* When the actual information button itself is hovered over, change the icon (and only the icon's) color to the same color
+green that has been represented throughout the rest of the Info Mapper */
+.geoLayerView-info-circle:hover .fa-info-circle {
+  color: #9DB66B;
+}
+
 .info {
 	padding: 6px 8px;
 	font: 14px/16px Arial, Helvetica, sans-serif;
