--- a/info-mapper/src/app/map-components/map.component.html
+++ b/info-mapper/src/app/map-components/map.component.html
@@ -266,6 +266,12 @@
 
                               </div>
                             </td>
+
+                            <!-- TODO: jpkeahey 2020.07.20 - Uncomment out to show the information button by the slider.
+                              (Don't forget the ngIf for if the docPath is set or not) -->
+                            <!-- <button class="btn geoLayerView-info-circle">
+                              <i class="fa fa-info-circle"></i>
+                            </button> -->
                           
                             <td class="toggle">
                               <label title="Show/hide '{{layerView.name}}' layer on the map" class="switch">
