--- a/info-mapper/src/app/map-components/map.component.html
+++ b/info-mapper/src/app/map-components/map.component.html
@@ -42,23 +42,60 @@
                 
                 <div class="card">
 
-                  <div class="geoLayerViewGroupMain">
-                    <button title="Click to expand/collapse layer controls"
-                    class="btn geoLayerViewGroupName" type="button" data-toggle="collapse" 
-                    [attr.data-target]='"#collapse-" + geoLayerViewGroup.geoLayerViewGroupId'
-                    aria-expanded="true"
-                    [attr.aria-controls]='"collapse-" + geoLayerViewGroup.geoLayerViewGroupId'
-                    style="text-align: left; width: 80%;">
-                      {{geoLayerViewGroup.name}}
-                    </button>
+                  <div *ngIf="geoLayerViewGroup.properties.docPath">
+                    <div class="btn-group geoLayerViewGroupMain">
 
-                    <button class="btn geoLayerViewGroupGear" title="Click to expand/collapse map controls"
-                            data-toggle="collapse" 
-                            [attr.data-target]="'#collapse-map-controls' + geoLayerViewGroup.geoLayerViewGroupId"
-                            aria-expanded="false"
-                            style="width: 20%;">
-                      <i class="fa fa-cog fa-lg" aria-hidden="true"></i>
-                    </button>
+                      <button title="Click to expand/collapse layer controls"
+                              class="btn geoLayerViewGroupName" type="button" data-toggle="collapse" 
+                              [attr.data-target]='"#collapse-" + geoLayerViewGroup.geoLayerViewGroupId'
+                              aria-expanded="true"
+                              [attr.aria-controls]='"collapse-" + geoLayerViewGroup.geoLayerViewGroupId'
+                              style="text-align: left; width: 65%;">
+                        {{geoLayerViewGroup.name}}
+                      </button>
+
+                      <div class="doc-button">
+                        <button class="btn geoLayerViewGroup-info-circle"
+                                (click)="showLayerDoc(geoLayerViewGroup.properties.docPath)"
+                                routerLink="."
+                                [queryParams]="{ dialog: true }">
+                          <i class="fa fa-info-circle fa-lg"></i>
+                        </button>
+                      </div>
+                        
+                      
+  
+                      <button class="btn geoLayerViewGroupGear" title="Click to expand/collapse map controls"
+                              data-toggle="collapse" 
+                              [attr.data-target]="'#collapse-map-controls' + geoLayerViewGroup.geoLayerViewGroupId"
+                              aria-expanded="false">
+                        <i class="fa fa-cog fa-lg" aria-hidden="true"></i>
+                      </button>
+                      
+  
+                    </div>
+                  </div>
+
+                  <div *ngIf="!geoLayerViewGroup.properties.docPath">
+                    <div class="geoLayerViewGroupMain">
+                      <button title="Click to expand/collapse layer controls"
+                      class="btn geoLayerViewGroupName" type="button" data-toggle="collapse" 
+                      [attr.data-target]='"#collapse-" + geoLayerViewGroup.geoLayerViewGroupId'
+                      aria-expanded="true"
+                      [attr.aria-controls]='"collapse-" + geoLayerViewGroup.geoLayerViewGroupId'
+                      style="text-align: left; width: 80%;">
+                        {{geoLayerViewGroup.name}}
+                      </button>
+  
+                      <button class="btn geoLayerViewGroupGear" title="Click to expand/collapse map controls"
+                              data-toggle="collapse" 
+                              [attr.data-target]="'#collapse-map-controls' + geoLayerViewGroup.geoLayerViewGroupId"
+                              aria-expanded="false"
+                              style="width: 20%;">
+                        <i class="fa fa-cog fa-lg" aria-hidden="true"></i>
+                      </button>
+  
+                    </div>
                   </div>
 
                     <div [attr.id]="'collapse-map-controls' + geoLayerViewGroup.geoLayerViewGroupId"
@@ -98,51 +135,6 @@
 
                     <div class="card-body">
                       <table class="layerOptions">
-
-                        <!-- <div class="card">
-                          <div class="card-header-map-controls" id="layerOptions">
-                            <button title="Click to expand/collapse map controls"
-                                    class="btn btn-link" type="button" data-toggle="collapse" 
-                                    [attr.data-target]="'#collapse-map-controls' + geoLayerViewGroup.geoLayerViewGroupId"
-                                    aria-expanded="true" style="font-size: 12px; text-align: left; width: 100%">
-                            Map Controls
-                            </button>
-                          </div>
-
-                          <div [attr.id]="'collapse-map-controls' + geoLayerViewGroup.geoLayerViewGroupId"
-                                class="collapse">
-                            <div class="card-body">
-                              <table class="layerOptions">
-                                <p style="margin-bottom:5px; float: left"><b><u>Map Controls:</u></b></p><br><br>
-                                <div id="toggleAll">
-                                  <div class="controlCol">
-                                    <button title="Click to show or hide all layers on the map" 
-                                      id="display-button" class="toggleAllButton" (click)="toggleAllLayers()">
-                                      Hide All Layers
-                                    </button>
-                                  </div>
-                                </div>
-              
-                                <p style="margin-bottom:5px; float: left"><b><u>Legend Controls:</u></b></p><br><br>
-                                <div id="toggleDescription">
-                                  <div id="controlDescription">
-                                    <input title="Show/hide the descriptions under the layer controls" 
-                                      type="checkbox" name="showDescriptions" (click)="toggleDescriptions()"> 
-                                      Hide All Descriptions
-                                  </div>
-                                </div>
-                                <div id="toggleDescription">
-                                  <div id="controlDescription">
-                                    <input title="Show/hide the symbols under the layer controls" 
-                                      type="checkbox" name="showSymbols" (click)="toggleSymbols()"> 
-                                      Hide All Symbols
-                                  </div>
-                                </div>
-                              </table>
-                            </div>
-                          </div>
-
-                        </div> -->
                         <hr class="divider">
 
                         <!-- Here go through each layerView and just show them. No need for trying to dynamically create
@@ -308,14 +300,13 @@
                               </div>
                             </td>
 
-                            <!-- TODO: jpkeahey 2020.07.20 - Uncomment out to show the information button by the slider.
-                              (Don't forget the ngIf for if the docPath is set or not) -->
+                            <!-- If the geoLayerView contains the docPath property and it's not empty, display the information here -->
                             <div *ngIf="layerView.properties.docPath" class="doc-button">
                               <button class="btn geoLayerView-info-circle"
                                       (click)="showLayerDoc(layerView.properties.docPath)"
                                       routerLink="."
                                       [queryParams]="{ dialog: true }">
-                                <i class="fa fa-info-circle"></i>
+                                <i class="fa fa-info-circle fa-lg"></i>
                               </button>
                             </div>
                           
