Upped the angular budgets for maximumerror from 6mb to 7mb

--- a/info-mapper/src/app/map-components/dialog-content/dialog-content.component.css
+++ b/info-mapper/src/app/map-components/dialog-content/dialog-content.component.css
@@ -43,5 +43,8 @@ div pre {
 
 #docDiv {
   height: 600px;
+  /* width: 800px; */
+  padding-left: 15px;
+  padding-right: 15px;
   overflow: scroll;
 }
