--- a/info-mapper/src/app/map-components/map.component.html
+++ b/info-mapper/src/app/map-components/map.component.html
@@ -8,17 +8,32 @@
       <!-- top aligned tabs -->
       <ul role="tablist">
         <!-- Main menu button (Hamburger Icon) -->
-        <li><a title="Main tools" href="#home" role="tab"><i class="fa fa-bars active"></i></a></li>
+        <li>
+          <a href="#home"
+              role="tab"
+              matTooltip="Main tools"
+              matTooltipShowDelay="750">
+                <i class="fa fa-bars active"></i>
+          </a>
+        </li>
         <!-- Autopan button (4 directional arrows) -->
-        <!-- <li><a title="Autopan tools" href="#autopan" role="tab"><i class="fa fa-arrows"></i></a></li> -->
+        <!-- <li><a matTooltip="Autopan tools" href="#autopan" role="tab"><i class="fa fa-arrows"></i></a></li> -->
         <!---Information Button (i)-->
-        <!-- <li><a title="Help / About" href="#information" role="tab"><i class="fa fa-info-circle"></i></a></li> -->
+        <!-- <li><a matTooltip="Help / About" href="#information" role="tab"><i class="fa fa-info-circle"></i></a></li> -->
       </ul>
 
       <!-- bottom aligned tabs -->
       <ul role="tablist">
-        <li><a title="Help / About" href="#information" role="tab"><i class="fa fa-info-circle"></i></a></li>
-        <!-- <li><a title="External link to project on GitHub" href="https://github.com/nickpeihl/leaflet-sidebar-v2"><i class="fa fa-github"></i></a></li> -->
+        <li>
+          <a href="#information"
+              role="tab"
+              matTooltip="Help / About"
+              matTooltipShowDelay="750"
+              matTooltipPosition="right">
+            <i class="fa fa-info-circle"></i>
+          </a>
+        </li>
+        <!-- <li><a matTooltip="External link to project on GitHub" href="https://github.com/nickpeihl/leaflet-sidebar-v2"><i class="fa fa-github"></i></a></li> -->
       </ul>
     </div>
 
@@ -34,13 +49,19 @@
                       (click)="showLayerDoc(mapService.getMapConfig().geoMaps[0].properties.docPath)"
                       routerLink="."
                       [queryParams]="{ dialog: true }"
+                      matTooltip="Click to view map documentation"
+                      [matTooltipShowDelay]="750"
                       style="margin-right: 40px;">
                 <i class="fa fa-info-circle fa-lg"></i>
               </button>
             </div>
           </div>
           
-          <span title="Close sidebar" class="leaflet-sidebar-close"><i class="fa fa-caret-left"></i></span>
+          <span matTooltip="Close sidebar"
+                [matTooltipShowDelay]="750"
+                class="leaflet-sidebar-close">
+                  <i class="fa fa-caret-left"></i>
+          </span>
           
         </h1>
 
@@ -58,11 +79,14 @@
                   <div *ngIf="geoLayerViewGroup.properties.docPath">
                     <div class="btn-group geoLayerViewGroupMain">
 
-                      <button title="Click to expand/collapse layer controls"
-                              class="btn geoLayerViewGroupName" type="button" data-toggle="collapse" 
+                      <button class="btn geoLayerViewGroupName"
+                              data-toggle="collapse"
+                              matTooltip="Click to expand/collapse layer controls"
+                              matTooltipPosition="above"
+                              [matTooltipShowDelay]="750"
+                              [attr.aria-controls]='"collapse-" + geoLayerViewGroup.geoLayerViewGroupId'
                               [attr.data-target]='"#collapse-" + geoLayerViewGroup.geoLayerViewGroupId'
                               aria-expanded="true"
-                              [attr.aria-controls]='"collapse-" + geoLayerViewGroup.geoLayerViewGroupId'
                               style="text-align: left; width: 100%;">
                         {{geoLayerViewGroup.name}}
                       </button>
@@ -71,38 +95,43 @@
                         <button class="btn geoLayerViewGroup-info-circle"
                                 (click)="showLayerDoc(geoLayerViewGroup.properties.docPath)"
                                 routerLink="."
-                                [queryParams]="{ dialog: true }">
+                                [queryParams]="{ dialog: true }"
+                                matTooltip="Click to view layer group documentation"
+                                [matTooltipShowDelay]="750">
                           <i class="fa fa-info-circle fa-lg"></i>
                         </button>
                       </div>
-                        
-                      
-  
-                      <button class="btn geoLayerViewGroupGear" title="Click to expand/collapse map controls"
+
+                      <button class="btn geoLayerViewGroupGear"
                               data-toggle="collapse" 
                               [attr.data-target]="'#collapse-map-controls' + geoLayerViewGroup.geoLayerViewGroupId"
-                              aria-expanded="false">
+                              aria-expanded="false"
+                              matTooltip="Click to expand/collapse map controls"
+                              [matTooltipShowDelay]="750">
                         <i class="fa fa-cog fa-lg" aria-hidden="true"></i>
                       </button>
-                      
-  
+
                     </div>
                   </div>
 
                   <div *ngIf="!geoLayerViewGroup.properties.docPath">
                     <div class="geoLayerViewGroupMain">
-                      <button title="Click to expand/collapse layer controls"
-                      class="btn geoLayerViewGroupName" type="button" data-toggle="collapse" 
-                      [attr.data-target]='"#collapse-" + geoLayerViewGroup.geoLayerViewGroupId'
-                      aria-expanded="true"
-                      [attr.aria-controls]='"collapse-" + geoLayerViewGroup.geoLayerViewGroupId'
-                      style="text-align: left; width: 80%;">
+                      <button class="btn geoLayerViewGroupName"
+                              data-toggle="collapse"
+                              [attr.aria-controls]='"collapse-" + geoLayerViewGroup.geoLayerViewGroupId'
+                              [attr.data-target]='"#collapse-" + geoLayerViewGroup.geoLayerViewGroupId'
+                              matTooltip="Click to expand/collapse layer controls"
+                              [matTooltipShowDelay]="750"
+                              aria-expanded="true"
+                              style="text-align: left; width: 80%;">
                         {{geoLayerViewGroup.name}}
                       </button>
   
-                      <button class="btn geoLayerViewGroupGear" title="Click to expand/collapse map controls"
+                      <button class="btn geoLayerViewGroupGear"
                               data-toggle="collapse" 
                               [attr.data-target]="'#collapse-map-controls' + geoLayerViewGroup.geoLayerViewGroupId"
+                              matTooltip="Click to expand/collapse map controls"
+                              [matTooltipShowDelay]="750"
                               aria-expanded="false"
                               style="width: 20%;">
                         <i class="fa fa-cog fa-lg" aria-hidden="true"></i>
@@ -118,8 +147,12 @@
                           <p style="margin-bottom:5px; float: left"><b><u>Map Controls:</u></b></p><br><br>
                           <div id="toggleAll">
                             <div class="controlCol">
-                              <button title="Click to show or hide all layers on the map" 
-                                id="display-button" class="toggleAllButton" (click)="toggleAllLayers()">
+                              <button class="toggleAllButton"
+                                      id="display-button"
+                                      (click)="toggleAllLayers()"
+                                      matTooltip="Click to show or hide all layers on the map"
+                                      matTooltipPosition="right"
+                                      [matTooltipShowDelay]="750">
                                 Hide All Layers
                               </button>
                             </div>
@@ -128,15 +161,22 @@
                           <p style="margin-bottom:5px; float: left"><b><u>Legend Controls:</u></b></p><br><br>
                           <div id="toggleDescription">
                             <div id="controlDescription">
-                              <input title="Show/hide the descriptions under the layer controls" 
-                                type="checkbox" name="showDescriptions" (click)="toggleDescriptions()"> 
+                              <input name="showDescriptions"
+                                      type="checkbox"
+                                      matTooltip="Show/hide the descriptions under the layer controls"
+                                      matTooltipPosition="above"
+                                      [matTooltipShowDelay]="750"
+                                      (click)="toggleDescriptions()"> 
                                 Hide All Descriptions
                             </div>
                           </div>
                           <div id="toggleDescription">
                             <div id="controlDescription">
-                              <input title="Show/hide the symbols under the layer controls" 
-                                type="checkbox" name="showSymbols" (click)="toggleSymbols()"> 
+                              <input name="showSymbols"
+                                      type="checkbox"
+                                      matTooltip="Show/hide the symbols under the layer controls"
+                                      [matTooltipShowDelay]="750"
+                                      (click)="toggleSymbols()"> 
                                 Hide All Symbols
                             </div>
                           </div>
@@ -318,13 +358,17 @@
                               <button class="btn geoLayerView-info-circle"
                                       (click)="showLayerDoc(layerView.properties.docPath)"
                                       routerLink="."
-                                      [queryParams]="{ dialog: true }">
+                                      [queryParams]="{ dialog: true }"
+                                      matTooltip="Click to display layer view documentation"
+                                      matTooltipShowDelay="750">
                                 <i class="fa fa-info-circle fa-lg"></i>
                               </button>
                             </div>
                           
                             <td class="toggle">
-                              <label title="Show/hide '{{layerView.name}}' layer on the map" class="switch">
+                              <label class="switch"
+                                      matTooltip="Show/hide this layer view on the map"
+                                      matTooltipShowDelay="750">
 
                                 <input id="{{layerView.geoLayerId}}-slider" type="checkbox"
                                         (click)="toggleLayer(layerView.geoLayerId)" [attr.checked]="selectedInitial(layerView)">
@@ -349,10 +393,14 @@
                 <div class="card">
                   <div class="card-header" id="background-layers">
                     <h5 class="mb-0">
-                      <button title="Click to expand/collapse basemap layer tools"
-                              class="btn btn-link" type="button"
-                              data-toggle="collapse" data-target="#collapse-two"
-                              aria-expanded="true" aria-controls="collapseOne"
+                      <button class="btn btn-link"
+                              data-target="#collapse-two"
+                              data-toggle="collapse"
+                              matTooltip="Click to expand/collapse basemap layer tools"
+                              matTooltipShowDelay="750"
+                              matTooltipPosition="above"
+                              aria-expanded="true"
+                              aria-controls="collapseOne"
                               style="text-align: left; width: 100%;">
                         {{geoLayerViewGroup.name}}
                       </button>
